# GDSL

./: CMakeLists.txt  OVERVIEW.md  README.md
include/gdsl/: diff.h  verify.h
src/gdsl/: diff.c  verify.c
tests/: test_diff.c  test_verify.c
